change `List.of()` to `Collections.emptyList()`